Changes for 1.4.2:

 - fixed upgrade script to correctly process host-template linkage (Alexei)
 - fixed synchronisation of delete operation between nodes (Alexei)
 - fixed problem with libresolv under Solaris 8 (Alexei)
 - improved SMS sender (Eugene)
 - improved item and trigger filtering (Eugene)
 - added dotted drowing type for links of map (Eugene)
 - fixed links drowing type of map (Eugene)
 - fixed items,graphs,hostgroups deletion (Eugene)
 - fixed permisions for maps (Eugene)
 - fixed filtering of items by status (Eugene)
 - fixed collector for WinXX (Eugene)
 - fixed definition of serial columns to allow use of older MySQL (Alexei)
 - decreased required version of libcurl (Eugene)
 - added timeout handler for http monitoring (Eugene)
 - more informative report for confiuration script (Eugene)
 - changed installation directory to '$sbin' (Eudene)
 - fixed "Reset" button for Web screens (Eugene)
 - fixed graph items limitation for IE6 (Eugene)
 - added availability of using spaces for trigger expressions (Eugene)
 - improved inheritance of template graphs (Eugene)
 - fixed permissions for logfile (Eugene)
 - changed syntax of keys for external checks (Alexei)
 - changed syntax of keys for aggregate items (Alexei)
 - fixed DM configuration exchange in 32-bit environments (Alexei)
 - fixed agent library dependencies (Eugene)
 - fixed reset button for graph (Eugene)
 - fixed item multiple cleaning on mass update (Eugene)
 - fixed error 'undefined function delete_service' (Eugene)
 - fixed internal loging system (Eugene)
 - added non-persistent connection for PostgreSQL to avoid problems with unfinished transactions (Alexei)
 - fixed housekeeper to process history_text (Alexei)
 - added availability of using ":," character for key (Eugene)
 - improved zabbix_get for receiving large data (Eugene)
 - fixed shared memory allocation (Eugene)
 - added server-side transactions for PostgreSQL (Alexei)
 - fixed housekeeper to run as multiple transations (Alexei)