@@ -162,6 +162,12 @@
 				ITEM_VALUE_TYPE_LOG
 				)
 			);
+		$ZBX_TR_EXPR_ALLOWED_FUNCTIONS['iregexp']= array('args' => array( 0 => array('type' => 'str','mandat' => true) ),
+			'item_types' => array(
+				ITEM_VALUE_TYPE_STR,
+				ITEM_VALUE_TYPE_LOG
+				)
+			);
 	}
 
 	INIT_TRIGGER_EXPRESSION_STRUCTURES();
